# GenoBench

./: .gitignore  LICENSE  README.md  hello_world.py  pyproject.toml  requirements.txt
docs/: architecture.md  extensibility_guide.md  hardware_profiling.md
genobench/: cli.py  evaluator.py
genobench/hardware/: __init__.py  probe.py
genobench/metrics/: __init__.py  classification.py
genobench/models/: __init__.py  base.py  dnabert2.py  dummy.py  hyenadna.py
genobench/tasks/: __init__.py  dummy.py  human_enhancers_cohn.py
genobench/utils/: __init__.py  logging.py
tests/: test_metrics.py
